simpleble_c/peripheral.h

    /**
     * @brief Releases all memory and resources consumed by the specific
     *        instance of simpleble_peripheral_t.
     *
     * @param handle
     */
    SIMPLEBLE_EXPORT void simpleble_peripheral_release_handle(simpleble_peripheral_t handle);
    /**
     * @brief
     *
     * @param handle
     * @return char*
     */
    SIMPLEBLE_EXPORT char *simpleble_peripheral_identifier(simpleble_peripheral_t handle);
    /**
     * @brief
     *
     * @param handle
     * @return char*
     */
    SIMPLEBLE_EXPORT char *simpleble_peripheral_address(simpleble_peripheral_t handle);
    /**
     * @brief
     *
     * @param handle
     * @return simpleble_address_type_t
     */
    SIMPLEBLE_EXPORT simpleble_address_type_t simpleble_peripheral_address_type(simpleble_peripheral_t handle);
    /**
     * @brief
     *
     * @param handle
     * @return int16_t
     */
    SIMPLEBLE_EXPORT int16_t simpleble_peripheral_rssi(simpleble_peripheral_t handle);
    /**
     * @brief
     *
     * @param handle
     * @return int16_t
     */
    SIMPLEBLE_EXPORT int16_t simpleble_peripheral_tx_power(simpleble_peripheral_t handle);
    /**
     * @brief
     *
     * @param handle
     * @return uint16_t
     */
    SIMPLEBLE_EXPORT uint16_t simpleble_peripheral_mtu(simpleble_peripheral_t handle);
    /**
     * @brief
     *
     * @param handle
     * @return simpleble_err_t
     */
    SIMPLEBLE_EXPORT simpleble_err_t simpleble_peripheral_connect(simpleble_peripheral_t handle);
    /**
     * @brief
     *
     * @param handle
     * @return simpleble_err_t
     */
    SIMPLEBLE_EXPORT simpleble_err_t simpleble_peripheral_disconnect(simpleble_peripheral_t handle);
    /**
     * @brief
     *
     * @param handle
     * @param connected
     * @return simpleble_err_t
     */
    SIMPLEBLE_EXPORT simpleble_err_t simpleble_peripheral_is_connected(simpleble_peripheral_t handle, bool *connected);
    /**
     * @brief
     *
     * @param handle
     * @param connectable
     * @return simpleble_err_t
     */
    SIMPLEBLE_EXPORT simpleble_err_t simpleble_peripheral_is_connectable(simpleble_peripheral_t handle, bool *connectable);
    /**
     * @brief
     *
     * @param handle
     * @param paired
     * @return simpleble_err_t
     */
    SIMPLEBLE_EXPORT simpleble_err_t simpleble_peripheral_is_paired(simpleble_peripheral_t handle, bool *paired);
    /**
     * @brief
     *
     * @param handle
     * @return simpleble_err_t
     */
    SIMPLEBLE_EXPORT simpleble_err_t simpleble_peripheral_unpair(simpleble_peripheral_t handle);
    /**
     * @brief
     *
     * @param handle
     * @param service
     * @param characteristic
     * @param callback
     * @return simpleble_err_t
     */
    SIMPLEBLE_EXPORT simpleble_err_t
    simpleble_peripheral_notify(simpleble_peripheral_t handle, simpleble_uuid_t service, simpleble_uuid_t characteristic,
                                void (*callback)(simpleble_uuid_t service, simpleble_uuid_t characteristic,
                                                 const uint8_t *data, size_t data_length, void *userdata),
                                void *userdata);
    /**
     * @brief
     *
     * @param handle
     * @param service
     * @param characteristic
     * @param callback
     * @return simpleble_err_t
     */
    SIMPLEBLE_EXPORT simpleble_err_t
    simpleble_peripheral_indicate(simpleble_peripheral_t handle, simpleble_uuid_t service, simpleble_uuid_t characteristic,
                                  void (*callback)(simpleble_uuid_t service, simpleble_uuid_t characteristic,
                                                   const uint8_t *data, size_t data_length, void *userdata),
                                  void *userdata);
    /**
     * @brief
     *
     * @param handle
     * @param callback
     * @return simpleble_err_t
     */
    SIMPLEBLE_EXPORT simpleble_err_t simpleble_peripheral_set_callback_on_connected(
        simpleble_peripheral_t handle, void (*callback)(simpleble_peripheral_t peripheral, void *userdata), void *userdata);
    /**
     * @brief
     *
     * @param handle
     * @param callback
     * @return simpleble_err_t
     */
    SIMPLEBLE_EXPORT simpleble_err_t simpleble_peripheral_set_callback_on_disconnected(
        simpleble_peripheral_t handle, void (*callback)(simpleble_peripheral_t peripheral, void *userdata), void *userdata);