lib/generated/generated_bindings.dart


  late final _simpleble_adapter_set_callback_on_scan_stopPtr = _lookup<
          ffi.NativeFunction<
              ffi.Int32 Function(
                  simpleble_adapter_t,
                  ffi.Pointer<
                      ffi.NativeFunction<
                          ffi.Void Function(simpleble_adapter_t adapter,
                              ffi.Pointer<ffi.Void> userdata)>>,
                  ffi.Pointer<ffi.Void>)>>(
      'simpleble_adapter_set_callback_on_scan_stop');
  late final _simpleble_adapter_set_callback_on_scan_stop =
      _simpleble_adapter_set_callback_on_scan_stopPtr.asFunction<
          int Function(
              simpleble_adapter_t,
              ffi.Pointer<
                  ffi.NativeFunction<
                      ffi.Void Function(simpleble_adapter_t adapter,
                          ffi.Pointer<ffi.Void> userdata)>>,
              ffi.Pointer<ffi.Void>)>();

  /// @brief
  ///
  /// @param handle
  /// @param callback
  /// @return simpleble_err_t
  int simpleble_adapter_set_callback_on_scan_updated(
    simpleble_adapter_t handle,
    ffi.Pointer<
            ffi.NativeFunction<
                ffi.Void Function(
                    simpleble_adapter_t adapter,
                    simpleble_peripheral_t peripheral,
                    ffi.Pointer<ffi.Void> userdata)>>
        callback,
    ffi.Pointer<ffi.Void> userdata,
  ) {
    return _simpleble_adapter_set_callback_on_scan_updated(
      handle,
      callback,
      userdata,
    );
  }

  late final _simpleble_adapter_set_callback_on_scan_updatedPtr = _lookup<
          ffi.NativeFunction<
              ffi.Int32 Function(
                  simpleble_adapter_t,
                  ffi.Pointer<
                      ffi.NativeFunction<
                          ffi.Void Function(
                              simpleble_adapter_t adapter,
                              simpleble_peripheral_t peripheral,
                              ffi.Pointer<ffi.Void> userdata)>>,
                  ffi.Pointer<ffi.Void>)>>(
      'simpleble_adapter_set_callback_on_scan_updated');
  late final _simpleble_adapter_set_callback_on_scan_updated =
      _simpleble_adapter_set_callback_on_scan_updatedPtr.asFunction<
          int Function(
              simpleble_adapter_t,
              ffi.Pointer<
                  ffi.NativeFunction<
                      ffi.Void Function(
                          simpleble_adapter_t adapter,
                          simpleble_peripheral_t peripheral,
                          ffi.Pointer<ffi.Void> userdata)>>,
              ffi.Pointer<ffi.Void>)>();

  /// @brief
  ///
  /// @param handle
  /// @param callback
  /// @return simpleble_err_t
  int simpleble_adapter_set_callback_on_scan_found(
    simpleble_adapter_t handle,
    ffi.Pointer<
            ffi.NativeFunction<
                ffi.Void Function(
                    simpleble_adapter_t adapter,
                    simpleble_peripheral_t peripheral,
                    ffi.Pointer<ffi.Void> userdata)>>
        callback,
    ffi.Pointer<ffi.Void> userdata,
  ) {
    return _simpleble_adapter_set_callback_on_scan_found(
      handle,
      callback,
      userdata,
    );
  }

  late final _simpleble_adapter_set_callback_on_scan_foundPtr = _lookup<
          ffi.NativeFunction<
              ffi.Int32 Function(
                  simpleble_adapter_t,
                  ffi.Pointer<
                      ffi.NativeFunction<
                          ffi.Void Function(
                              simpleble_adapter_t adapter,
                              simpleble_peripheral_t peripheral,
                              ffi.Pointer<ffi.Void> userdata)>>,
                  ffi.Pointer<ffi.Void>)>>(
      'simpleble_adapter_set_callback_on_scan_found');
  late final _simpleble_adapter_set_callback_on_scan_found =
      _simpleble_adapter_set_callback_on_scan_foundPtr.asFunction<
          int Function(
              simpleble_adapter_t,
              ffi.Pointer<
                  ffi.NativeFunction<
                      ffi.Void Function(
                          simpleble_adapter_t adapter,
                          simpleble_peripheral_t peripheral,
                          ffi.Pointer<ffi.Void> userdata)>>,
              ffi.Pointer<ffi.Void>)>();

  /// @brief Releases all memory and resources consumed by the specific
  /// instance of simpleble_peripheral_t.
  ///
  /// @param handle
  void simpleble_peripheral_release_handle(
    simpleble_peripheral_t handle,
  ) {
    return _simpleble_peripheral_release_handle(
      handle,
    );
  }

  late final _simpleble_peripheral_release_handlePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(simpleble_peripheral_t)>>(
          'simpleble_peripheral_release_handle');
  late final _simpleble_peripheral_release_handle =
      _simpleble_peripheral_release_handlePtr
          .asFunction<void Function(simpleble_peripheral_t)>();

  /// @brief
  ///
  /// @param handle
  /// @return char*
  ffi.Pointer<ffi.Char> simpleble_peripheral_identifier(
    simpleble_peripheral_t handle,
  ) {
    return _simpleble_peripheral_identifier(
      handle,
    );
  }

  late final _simpleble_peripheral_identifierPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              simpleble_peripheral_t)>>('simpleble_peripheral_identifier');
  late final _simpleble_peripheral_identifier =
      _simpleble_peripheral_identifierPtr
          .asFunction<ffi.Pointer<ffi.Char> Function(simpleble_peripheral_t)>();

  /// @brief
  ///
  /// @param handle
  /// @return char*
  ffi.Pointer<ffi.Char> simpleble_peripheral_address(
    simpleble_peripheral_t handle,
  ) {
    return _simpleble_peripheral_address(
      handle,
    );
  }

  late final _simpleble_peripheral_addressPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              simpleble_peripheral_t)>>('simpleble_peripheral_address');
  late final _simpleble_peripheral_address = _simpleble_peripheral_addressPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(simpleble_peripheral_t)>();

  /// @brief
  ///
  /// @param handle
  /// @return simpleble_address_type_t
  int simpleble_peripheral_address_type(
    simpleble_peripheral_t handle,
  ) {
    return _simpleble_peripheral_address_type(
      handle,
    );
  }

  late final _simpleble_peripheral_address_typePtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(simpleble_peripheral_t)>>(
          'simpleble_peripheral_address_type');
  late final _simpleble_peripheral_address_type =
      _simpleble_peripheral_address_typePtr
          .asFunction<int Function(simpleble_peripheral_t)>();

  /// @brief
  ///
  /// @param handle
  /// @return int16_t
  int simpleble_peripheral_rssi(
    simpleble_peripheral_t handle,
  ) {
    return _simpleble_peripheral_rssi(
      handle,
    );
  }

  late final _simpleble_peripheral_rssiPtr =
      _lookup<ffi.NativeFunction<ffi.Int16 Function(simpleble_peripheral_t)>>(
          'simpleble_peripheral_rssi');
  late final _simpleble_peripheral_rssi = _simpleble_peripheral_rssiPtr
      .asFunction<int Function(simpleble_peripheral_t)>();

  /// @brief
  ///
  /// @param handle
  /// @return int16_t
  int simpleble_peripheral_tx_power(
    simpleble_peripheral_t handle,
  ) {
    return _simpleble_peripheral_tx_power(
      handle,
    );
  }

  late final _simpleble_peripheral_tx_powerPtr =
      _lookup<ffi.NativeFunction<ffi.Int16 Function(simpleble_peripheral_t)>>(
          'simpleble_peripheral_tx_power');
  late final _simpleble_peripheral_tx_power = _simpleble_peripheral_tx_powerPtr
      .asFunction<int Function(simpleble_peripheral_t)>();

  /// @brief
  ///
  /// @param handle
  /// @return uint16_t
  int simpleble_peripheral_mtu(
    simpleble_peripheral_t handle,
  ) {
    return _simpleble_peripheral_mtu(
      handle,
    );
  }

  late final _simpleble_peripheral_mtuPtr =
      _lookup<ffi.NativeFunction<ffi.Uint16 Function(simpleble_peripheral_t)>>(
          'simpleble_peripheral_mtu');
  late final _simpleble_peripheral_mtu = _simpleble_peripheral_mtuPtr
      .asFunction<int Function(simpleble_peripheral_t)>();

  /// @brief
  ///
  /// @param handle
  /// @return simpleble_err_t
  int simpleble_peripheral_connect(
    simpleble_peripheral_t handle,
  ) {
    return _simpleble_peripheral_connect(
      handle,
    );
  }

  late final _simpleble_peripheral_connectPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(simpleble_peripheral_t)>>(
          'simpleble_peripheral_connect');
  late final _simpleble_peripheral_connect = _simpleble_peripheral_connectPtr
      .asFunction<int Function(simpleble_peripheral_t)>();

  /// @brief
  ///
  /// @param handle
  /// @return simpleble_err_t
  int simpleble_peripheral_disconnect(
    simpleble_peripheral_t handle,
  ) {
    return _simpleble_peripheral_disconnect(
      handle,
    );
  }

  late final _simpleble_peripheral_disconnectPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(simpleble_peripheral_t)>>(
          'simpleble_peripheral_disconnect');
  late final _simpleble_peripheral_disconnect =
      _simpleble_peripheral_disconnectPtr
          .asFunction<int Function(simpleble_peripheral_t)>();

  /// @brief
  ///
  /// @param handle
  /// @param connected
  /// @return simpleble_err_t
  int simpleble_peripheral_is_connected(
    simpleble_peripheral_t handle,
    ffi.Pointer<ffi.Bool> connected,
  ) {
    return _simpleble_peripheral_is_connected(
      handle,
      connected,
    );
  }

  late final _simpleble_peripheral_is_connectedPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(simpleble_peripheral_t,
              ffi.Pointer<ffi.Bool>)>>('simpleble_peripheral_is_connected');
  late final _simpleble_peripheral_is_connected =
      _simpleble_peripheral_is_connectedPtr.asFunction<
          int Function(simpleble_peripheral_t, ffi.Pointer<ffi.Bool>)>();

  /// @brief
  ///
  /// @param handle
  /// @param connectable
  /// @return simpleble_err_t
  int simpleble_peripheral_is_connectable(
    simpleble_peripheral_t handle,
    ffi.Pointer<ffi.Bool> connectable,
  ) {
    return _simpleble_peripheral_is_connectable(
      handle,
      connectable,
    );
  }

  late final _simpleble_peripheral_is_connectablePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(simpleble_peripheral_t,
              ffi.Pointer<ffi.Bool>)>>('simpleble_peripheral_is_connectable');
  late final _simpleble_peripheral_is_connectable =
      _simpleble_peripheral_is_connectablePtr.asFunction<
          int Function(simpleble_peripheral_t, ffi.Pointer<ffi.Bool>)>();

  /// @brief
  ///
  /// @param handle
  /// @param paired
  /// @return simpleble_err_t
  int simpleble_peripheral_is_paired(
    simpleble_peripheral_t handle,
    ffi.Pointer<ffi.Bool> paired,
  ) {
    return _simpleble_peripheral_is_paired(
      handle,
      paired,
    );
  }

  late final _simpleble_peripheral_is_pairedPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(simpleble_peripheral_t,
              ffi.Pointer<ffi.Bool>)>>('simpleble_peripheral_is_paired');
  late final _simpleble_peripheral_is_paired =
      _simpleble_peripheral_is_pairedPtr.asFunction<
          int Function(simpleble_peripheral_t, ffi.Pointer<ffi.Bool>)>();

  /// @brief
  ///
  /// @param handle
  /// @return simpleble_err_t
  int simpleble_peripheral_unpair(
    simpleble_peripheral_t handle,
  ) {
    return _simpleble_peripheral_unpair(
      handle,
    );
  }

  late final _simpleble_peripheral_unpairPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(simpleble_peripheral_t)>>(
          'simpleble_peripheral_unpair');
  late final _simpleble_peripheral_unpair = _simpleble_peripheral_unpairPtr
      .asFunction<int Function(simpleble_peripheral_t)>();
